// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative grpc/interface.proto
syntax = "proto3";

package ping;
option go_package = "https://github.com/Tyyrid/DISYS-Handin-4;ping";


service Ping {
  rpc AnswerRequest (UserInput) returns (Request) {}
}

message Request {
  int32 ProcessId = 1;
  int32 LamportTimeStamp = 2;
  string RequestMsg = 3;
}

message Reply {
  int32 ProcessId = 1;
  int32 LamportTimeStamp = 2;
  string ReplyMsg = 3;
}